--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li><a href="index.html"
               class="text-base cursor-pointer font-bold text-[#A6A8A9] transition-all duration-300 hover:text-white">الفرص
               العقارية</a></li>
-          <li><a href="index.html"
+          <li><a href="Training.html"
               class="text-base cursor-pointer font-bold text-[#A6A8A9] transition-all duration-300 hover:text-white">الدورات
               التدريبية</a></li>
         </ul>
