--- a/services.html
+++ b/services.html
@@ -69,9 +69,9 @@
                             <li><a href="index.html"
                                     class="text-base cursor-pointer font-bold text-[#A6A8A9] transition-all duration-300 hover:text-white">الفرص
                                     العقارية</a></li>
-                            <li><a href="index.html"
-                                    class="text-base cursor-pointer font-bold text-[#A6A8A9] transition-all duration-300 hover:text-white">الدورات
-                                    التدريبية</a></li>
+          <li><a href="Training.html"
+              class="text-base cursor-pointer font-bold text-[#A6A8A9] transition-all duration-300 hover:text-white">الدورات
+              التدريبية</a></li>
                         </ul>
                         <nav id="mainMenu"
                             class="absolute hidden top-24 right-10 flex-col justify-center p-8 text-base font-bold text-white rounded-3xl shadow backdrop-blur-[6px] bg-[#5b5b5b40] bg-opacity-30"
